# coresdk

./: .gitignore  CMakeLists.txt  ClassDiagram.dia  DownloadProject.cmake  README
CoreEngine/: CMakeLists.txt  README
CoreEngine/include/conf/: GLTypes - GLES2_0.h  GLTypes_nongl.h
CoreEngine/include/coreEngine/: IApplication.h  IRenderer.h
CoreEngine/include/coreEngine/animation/: Animation.h  ChronoTimeKeeper.h  IInterpolator.h  ITimeKeeper.h  LinearInterpolator.h
CoreEngine/include/coreEngine/conf/: MathType.h
CoreEngine/include/coreEngine/events/: AppEvent.h  AppEventListener.h  EventArgs.h  EventCloseApplication.h  EventCloseApplicationListener.h  EventControllerPosition.h  EventControllerPositionListener.h  EventControllerQuaternion.h  EventControllerQuaternionListener.h  EventKeyPress.h  EventKeyPressListener.h  EventMouse.h  EventMouseListener.h  EventPassiveMouseMotion.h  EventPassiveMouseMotionListener.h  EventQueue.h  EventQueueFactory.h  EventStart.h  EventStartListener.h  IEvent.h  IEventQueue.h
CoreEngine/include/coreEngine/factory/: ICameraFactory.h  IDiffuseTextureCubeMapFactory.h  IDiffuseTextureFactory.h  IEventGazeListenerFactory.h  IMaterialDiffuseTextureFactory.h  IModelFactory.h  ISceneFactory.h  IShaderDiffuseTextureFactory.h  ITextureFactory.h  IUniformColorFactory.h  IUniformFadeColorFactory.h
CoreEngine/include/coreEngine/modelBuilder/: ConcentricCircleBuilder.h  CubeBuilder.h  ModelLoader.h  RectBuilder.h  (+2 more)
CoreEngine/src/animation/: Animation.cpp
CoreEngine/src/conf/: MathType.cpp
CoreEngine/src/events/: EventQueue.cpp
CoreEngine/src/modelBuilder/: ConcentricCircleBuilder.cpp  CubeBuilder.cpp  ModelLoader.cpp  RectBuilder.cpp  RectangleBuilder.cpp  UVSphereBuilder.cpp
CoreEngine/src/modifier/: ImageBMPLoader.cpp  ImageJPEGLoader.cpp  ImageModifier.cpp  ImagePNGLoader.cpp  ModelModifier.cpp  TextureBMPLoader.cpp
CoreEngine/src/renderObjects/: Camera.cpp  ComponentList.cpp  Relation.cpp  Scene.cpp
CoreEngine/src/ui/: CharacterElement.cpp  FadeScreen.cpp  FontStore.cpp  PlanarBackground.cpp  Reticle.cpp  TextElement.cpp  UIElement.cpp
CoreEngine/src/util/: SimpleOBJLoader.cpp
CoreEngine/test/src/: AllTests.cpp  AnimationTest.cpp  AnimationVec2Test.cpp  CameraTest.cpp  ComponentListTest.cpp  CubeBuilderTest.cpp  EventQueueTest.cpp  GazeDetectorBoxTest.cpp  GazeDetectorTest.cpp  ImageModifierTest.cpp  LinearInterpolatorTest.cpp  MaterialTest.cpp  ModelBuilderTest.cpp  ModelLoaderTest.cpp  ModelModifierTest.cpp  ModelTest.cpp  RelationTest.cpp  SceneTest.cpp  ShaderTest.cpp  TextureTest.cpp  TransformCameraTest.cpp  TransformModelTest.cpp  TransformTreeCameraTest.cpp  TransformTreeModelTest.cpp  TransformTreeTest.cpp  UVSphereBuilderTest.cpp
FreeTypeTest/: CMakeLists.txt
FreeTypeTest/src/: FreeTypeTest.cpp  TextRenderer.cpp
GLImplementation/: CMakeLists.txt  README
GLImplementation/src/factory/: UniformColorFactoryGL.cpp
GLImplementation/src/renderObjects/: CameraGL.cpp  CameraGLContainer.cpp  MaterialDiffuseTextureCubeMapGL.cpp  MaterialDiffuseTextureGL.cpp  MaterialUniformColorGL.cpp  MaterialUniformFadeColorGL.cpp  ModelGL.cpp  SceneGL.cpp  ShaderDiffuseTextureCubeMapGL.cpp  ShaderDiffuseTextureGL.cpp  ShaderUniformColorGL.cpp  ShaderUniformFadeColorGL.cpp  TextureCubeMapGL.cpp  TextureGL.cpp
GLImplementation/src/ui/: MaterialTextGL.cpp  ShaderTextGL.cpp  TextureTextGL.cpp
GLImplementation/src/util/: ShaderProgramUtil.cpp
GVRAndroidImplementation/: CMakeLists.txt
GVRAndroidImplementation/Include/: ActionButtonListenerGVR.h  CloseButtonListenerGVR.h  CloseMeListenerGVR.h  GazeListenerFactoryGVR.h  LoggerGVR.h  LoggerGVRFactory.h  MutexLockGVR.h  NotifyMeListenerGVR.h  RendererGVR.h  RendererGVRStereo.h
GVRAndroidImplementation/src/: ActionButtonListenerGVR.cpp  CloseButtonListenerGVR.cpp  CloseMeListenerGVR.cpp  LoggerGVR.cpp  NotifyMeListenerGVR.cpp  RendererGVR.cpp  RendererGVRStereo.cpp
Image360/: CMakeLists.txt  README
Image360/include/image360/: ActionButtonListener.h  ApplicationObject.h  Buttons.h  CameraReticle.h  CloseButtonListener.h  CloseMeListener.h  Constants.h  Controller.h  FPSCamera.h  FadeScreen.h  GazeListenerFactory.h  Image360.h  Image360EventBeginFade.h  Image360EventControllerPositionListener.h  Image360EventKeyPressListener.h  Image360EventMouseListener.h  Image360EventPassiveMouseMotionListener.h  Image360Mono.h  Image360Stereo.h  MonoCubeMap.h  MonoSphere.h  NotifyMeListener.h  StereoObject.h  StereoSphere.h
Image360/src/: Buttons.cpp  CameraReticle.cpp  Controller.cpp  FPSCamera.cpp  FadeScreen.cpp  Image360.cpp  Image360EventControllerPositionListener.cpp  Image360EventKeyPressListener.cpp  Image360EventMouseListener.cpp  Image360EventPassiveMouseMotionListener.cpp  Image360Mono.cpp  Image360Stereo.cpp  MonoCubeMap.cpp  MonoSphere.cpp  StereoSphere.cpp
Image360WindowsLauncher/: CMakeLists.txt
Image360WindowsLauncher/src/: Image360WindowsLauncher.cpp  stdafx.cpp
OVRMAndroidImplementation/: CMakeLists.txt
OVRMAndroidImplementation/Include/: CloseMeListenerOVRM.h  GazeListenerFactoryOVRM.h  LoggerOVRMFactory.h  MutexLockOVRM.h  NotifyMeListenerOVRM.h  OVRUtils.h  RendererOVRM.h  RendererOVRMStereo.h
OVRMAndroidImplementation/src/: ActionButtonListenerOVRM.cpp  CloseMeListenerOVRM.cpp  ImageBMPLoaderAndroid.cpp  LoggerOVRM.cpp  NotifyMeListenerOVRM.cpp  OVRUtils.cpp  RendererOVRMStereo.cpp
Renderer/: CMakeLists.txt
Renderer/include/renderer/: RendererNoHMD.h  RendererNoHMDStereo.h
Renderer/src/: RendererNoHMD.cpp  RendererNoHMDStereo.cpp
SOIL/: CMakeLists.txt
SOIL/include/: stb_image.h
SOIL/src/: SOIL.c
WindowsImplementation/: CMakeLists.txt
WindowsImplementation/include/windowsImplementation/: ActionButtonListenerWindows.h  CloseButtonListenerWindows.h  CloseMeListenerWindows.h  GazeListenerFactoryWindows.h  GlfwEventCloseApplicationListener.h  LoggerFactoryWindows.h  LoggerWindows.h  MutexLockWindows.h  NotifyMeListenerWindows.h
WindowsImplementation/src/: LoggerWindows.cpp
WindowsImplementation/testApp/doc/: Dependencies
libjpeg9/: CMakeLists.txt
(+953 files in other folders)
